--- a/SurfsUp/climate_starter.ipynb
+++ b/SurfsUp/climate_starter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19818,44 +19818,44 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2016-08-24</th>\n",
-       "      <td>0.08</td>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-08-24</th>\n",
-       "      <td>2.15</td>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>0.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-08-24</th>\n",
-       "      <td>2.28</td>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>0.05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-08-24</th>\n",
+       "      <th>2016-08-23</th>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-08-24</th>\n",
-       "      <td>1.22</td>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>0.02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-08-24</th>\n",
-       "      <td>2.15</td>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>1.79</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2016-08-23</th>\n",
+       "      <td>0.70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2016-08-24</th>\n",
        "      <td>1.45</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-08-25</th>\n",
-       "      <td>0.08</td>\n",
+       "      <th>2016-08-24</th>\n",
+       "      <td>2.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2016-08-25</th>\n",
-       "      <td>0.08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2016-08-25</th>\n",
-       "      <td>0.00</td>\n",
+       "      <th>2016-08-24</th>\n",
+       "      <td>1.22</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -19864,16 +19864,16 @@
       "text/plain": [
        "            prcp\n",
        "date            \n",
-       "2016-08-24  0.08\n",
-       "2016-08-24  2.15\n",
-       "2016-08-24  2.28\n",
-       "2016-08-24   NaN\n",
-       "2016-08-24  1.22\n",
-       "2016-08-24  2.15\n",
+       "2016-08-23  0.00\n",
+       "2016-08-23  0.15\n",
+       "2016-08-23  0.05\n",
+       "2016-08-23   NaN\n",
+       "2016-08-23  0.02\n",
+       "2016-08-23  1.79\n",
+       "2016-08-23  0.70\n",
        "2016-08-24  1.45\n",
-       "2016-08-25  0.08\n",
-       "2016-08-25  0.08\n",
-       "2016-08-25  0.00"
+       "2016-08-24  2.15\n",
+       "2016-08-24  1.22"
       ]
      },
      "execution_count": 15,
@@ -19887,7 +19887,7 @@
     "# Starting from the most recent data point in the database. \n",
     "# Perform a query to retrieve the data and precipitation scores\n",
     "past_yr = session.query(measurement.date, measurement.prcp).\\\n",
-    "    filter(measurement.date >'2016-08-23').filter(measurement.date < '2017-08-23').\\\n",
+    "    filter(measurement.date >= '2016-08-23').filter(measurement.date <= '2017-08-23').\\\n",
     "    order_by(measurement.date).all()\n",
     "# Save the query results as a Pandas DataFrame. Explicitly set the column names\n",
     "# Sort the dataframe by date\n",
